--- a/movies/Jenkinsfile
+++ b/movies/Jenkinsfile
@@ -126,10 +126,11 @@ pipeline {
 
                 echo '### Creating a new app in Staging ###'
                 sh '''
-                        oc project ${STAGE_PROJECT}
-                        oc new-app --as-deployment-config --name ${APP_NAME} -i ${APP_NAME}:stage
-                        oc expose svc/${APP_NAME}
+                    oc project ${STAGE_PROJECT}
+                    oc new-app --as-deployment-config ${APP_NAME}:latest -n ${STAGE_PROJECT}
+                    oc expose svc/${APP_NAME} -n ${STAGE_PROJECT}
                    '''
+
             }
         }
 
