--- a/movies/Jenkinsfile
+++ b/movies/Jenkinsfile
@@ -10,7 +10,6 @@ pipeline {
     }
 
     environment {
-        //TODO: Customize these variables for your environment
         DEV_PROJECT = "fmikador-movies-dev"
         STAGE_PROJECT = "fmikador-movies-stage"
         APP_GIT_URL = "https://github.com/ilwad/DO288-apps"
@@ -82,24 +81,24 @@ pipeline {
                     }
                 }
                 sh '''
-                    oc new-app --as-deployment-config ${APP_NAME}:latest -n ${DEV_PROJECT}
-                    oc expose svc/${APP_NAME} -n ${DEV_PROJECT}
+                        oc new-app  --as-deployment-config ${APP_NAME}:latest -n ${DEV_PROJECT}
+                        oc expose svc/${APP_NAME} -n ${DEV_PROJECT}
                    '''
             }
         }
 
         stage('Wait for deployment in DEV env') {
             steps {
-              script {
-                openshift.withCluster() {
-                  openshift.withProject( "${DEV_PROJECT}" ) {
-                    openshift.selector("dc", "${APP_NAME}").related('pods').untilEach(1) {
-                      return (it.object().status.phase == "Running")
-                      }
-                   }
-                 }
-               }
-             }
+                script {
+                    openshift.withCluster() {
+                        openshift.withProject( "${DEV_PROJECT}" ) {
+                            openshift.selector("dc", "${APP_NAME}").related('pods').untilEach(1) {
+                                return (it.object().status.phase == "Running")
+                            }
+                        }
+                    }
+                }
+            }
         }
 
         stage('Promote to Staging Env') {
@@ -109,7 +108,7 @@ pipeline {
                 }
                 script {
                     openshift.withCluster() {
-                    openshift.tag("${DEV_PROJECT}/${APP_NAME}:latest", "${STAGE_PROJECT} ${APP_NAME}:stage")
+                    openshift.tag("${DEV_PROJECT}/${APP_NAME}:latest", "${STAGE_PROJECT}/${APP_NAME}:stage")
                     }
                 }
             }
@@ -126,11 +125,10 @@ pipeline {
 
                 echo '### Creating a new app in Staging ###'
                 sh '''
-                    oc project ${STAGE_PROJECT}
-                    oc new-app --as-deployment-config ${APP_NAME}:latest -n ${STAGE_PROJECT}
-                    oc expose svc/${APP_NAME} -n ${STAGE_PROJECT}
+                        oc project ${STAGE_PROJECT}
+                        oc new-app  --as-deployment-config --name ${APP_NAME} -i ${APP_NAME}:stage
+                        oc expose svc/${APP_NAME}
                    '''
-
             }
         }
 
